fix photos overflow bug

--- a/week-03/day-03/photo-gallery/style.css
+++ b/week-03/day-03/photo-gallery/style.css
@@ -38,7 +38,9 @@ body {
   padding: 1%;
 }
 
-.photo {
-  background-color: white;
+.photo img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
   border-radius: 8px;
 }
